.kube/ml_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-deployment
  labels:
    app: ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml
  template:
    metadata:
      labels:
        app: ml
    spec:
      containers:
      - name: ml-container
        image: nochoooo/essay-app-ml:v1
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: ml-service
spec:
  selector:
    app: ml
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8001
  type: NodePort
